methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:15: error: type mismatch;
 found   : Unit
 required: Boolean
    backward();
            ^