methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  	var vuVert: Boolean = false
  	forward();
  	if (estFaceMur()==false) {
      if (getCouleurSol()==Color.green) {
        vuVert=true
      } else {
        vuVert = false
      }
    } else {
      vuVert = false
    }
  	return vuVert
  	backward();
}

